-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 Beta 1
-
None
-
Windows
-
0e8a2788d84c814b698848b699af8a2c8ba3179f
search for "cmd" -> returns "".
The break; statement bails out of the inner loop.
| For Gerrit Dashboard: QTBUG-27457 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 36391,3 | Fix Windows: QStandardPath::findExecutable() to check suffixes. | master | qt/qtbase | Status: MERGED | +2 | 0 |